# PolyglotSubs-Kodi

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  addon.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
a4kSubtitles/: __init__.py  download.py  search.py
a4kSubtitles/lib/: kodi.py  kodi_mock.py
a4kSubtitles/services/: START APP.txt  subtitlecat.py
a4kSubtitles/tests/: test_download.py
a4kSubtitles/tests/services/: test_subtitlecat.py
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
tests/: details for the get_shared_translation.php.txt  example subtitlecat translate.js.txt  example subtitlecat.com aquaman subtitles all languages.txt  example subtitlecat.com moldovan translating percentage.txt  example subtitlecat.com subtitle moldovan translation finished click here to download.txt  example subtitlecat.com subtitle search results  example subtitlecat.com subtitle search results .txt  test_api.py  test_postprocess.py  test_search.py  test_subtitlecat_upload.py  test_suite.py  www.subtitlecat.com.har.txt
tests/services/: test_subtitlecat.py
tests/src/: encoding.js  iconv-lite.js  jschardet.js  main.js  progressbar.js  require.js  translate.js
